# taskcli

./: README.md  pyproject.toml
src/taskcli/: __init__.py  cli.py  storage.py  tasks.py
tests/: test_cli.py  test_tasks.py
