[project]
name = "taskcli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabchu", email = "terrence408408@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
taskcli = "taskcli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
